[gd_scene load_steps=13 format=2]

[ext_resource path="res://Root.gd" type="Script" id=1]
[ext_resource path="res://gui_panel_3d.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/3d/key.dae" type="PackedScene" id=3]
[ext_resource path="res://assets/3d/screwdriver.dae" type="PackedScene" id=4]
[ext_resource path="res://assets/3d/phone.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/3d/bottle.tscn" type="PackedScene" id=6]

[sub_resource type="ViewportTexture" id=1]
viewport_path = NodePath("Viewport")

[sub_resource type="SpatialMaterial" id=2]
resource_local_to_scene = true
flags_transparent = true
flags_unshaded = true
flags_albedo_tex_force_srgb = true
albedo_texture = SubResource( 1 )

[sub_resource type="Animation" id=3]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Objects/key:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0.01, 0.01, 0.01 ), Vector3( 0.05, 0.05, 0.05 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Objects/key:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( -0.214106, -0.106533, -0.66135 ), Vector3( -0.214106, -0.106533, 0.390636 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "acquire_phone"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Objects/phone:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( -0.454626, -0.190005, -0.575021 ), Vector3( -0.454626, -0.190005, 0.445878 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Objects/phone:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 0.5 ), Vector3( 2, 2, 1 ) ]
}

[sub_resource type="Animation" id=5]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Objects/key:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 180, 0 ), Vector3( 0, 360, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "spin_phone"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Objects/phone:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 90, 0, 0 ), Vector3( 90, 180, 0 ), Vector3( 90, 360, 0 ) ]
}

[node name="Root" type="Spatial"]
script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.19864 )
projection = 1
current = true
fov = 73.727
size = 1.95

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.623013, -0.733525, 0.271653, 0.321394, 0.55667, 0.766045, -0.713134, -0.389948, 0.582563, 0, 10, 2.03516 )
shadow_enabled = true
directional_shadow_blend_splits = true
directional_shadow_normal_bias = 0.2

[node name="Objects" type="Spatial" parent="."]

[node name="key" parent="Objects" instance=ExtResource( 3 )]
transform = Transform( 0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, -0.214106, -0.106533, -0.66135 )

[node name="screwdriver" parent="Objects" instance=ExtResource( 4 )]
transform = Transform( 0.02, 0, 0, 0, 0.02, 0, 0, 0, 0.02, -0.0061779, -0.0642803, -0.615398 )

[node name="phone" parent="Objects" instance=ExtResource( 5 )]
transform = Transform( -1, -3.25841e-07, 2.65431e-14, 0, -1.62921e-07, -0.5, 3.25841e-07, -1, 8.14603e-08, -0.454626, -0.190005, -0.575021 )

[node name="bottle" parent="Objects" instance=ExtResource( 6 )]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.110401, 0, -0.333453 )

[node name="GUIPanel3D" parent="." instance=ExtResource( 2 )]

[node name="Quad" parent="GUIPanel3D" index="1"]
material/0 = SubResource( 2 )

[node name="Animation3D" type="AnimationPlayer" parent="."]
anims/acquire_key = SubResource( 3 )
anims/acquire_phone = SubResource( 4 )
anims/spin_key = SubResource( 5 )
anims/spin_phone = SubResource( 6 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
[connection signal="animation_finished" from="Animation3D" to="." method="_on_AnimationPlayer_animation_finished"]

[editable path="GUIPanel3D"]
